--- a/my-bbq-website/netlify.toml
+++ b/my-bbq-website/netlify.toml
@@ -1,8 +1,9 @@
 [build]
-  command = "npm run build"
-  publish = "dist"
+base = "my-bbq-website"
+command = "npm run build"
+publish = "my-bbq-website/dist"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+from = "/*"
+to = "/index.html"
+status = 200
